# develop-a-dynamic-multi-agent-task-alloc

./: README.md  STEP-1.md  STEP-2.md  STEP-3.md  STEP-4.md  TASK.md  demo_state.json  final_test.json  main.py  pyproject.toml  test_report.json  test_state.json
