[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-develop-a-dynamic-multi-agent-task-alloc"
version = "0.1.0"
description = "Develop a Dynamic Multi-Agent Task Allocation System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [

]

[tool.setuptools]
py-modules = ["main"]
